# mana

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  macos.yml  ubuntu.yml  windows.yml
crates/mana/: Cargo.toml
crates/mana/src/: lib.rs  main.rs
crates/mana/src/cli/: app.rs  mod.rs
crates/mana/src/common/: mod.rs  rand.rs  type_of.rs
crates/mana/src/lexer/: ast.rs  mod.rs  token.rs
crates/mana/tests/: simple.rs
