[package]
name = "mana"
version = "0.0.1"
authors = ["Tom Bazarnik <tommywalkie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Something something work-in-progress"
repository = "https://github.com/tommywalkie/mana.git"

[lib]
name = "mana"
path = "src/lib.rs"

[[bin]]
name = "mana"
path = "src/main.rs"

[dependencies]
logos = "0.11.4"
seahorse = "1.0.0"